<resources>
    <string name="app_name">My App Portfolio</string>

    <!--
    Name for every app
    -->
    <string name="spotify_streamer">SPOTIFY STREAMER</string>

    <string name="scores_app">SCORES APP</string>

    <string name="library_app">LIBRARY APP</string>

    <string name="build_it_bigger">BUILD IT BIGGER</string>

    <string name="xyz_reader">XYZ READER</string>

    <string name="graduation_project">MY OWN APP</string>

    <!--
    Name for my nanodegree apps
    -->
    <string name="my_nano_degree_apps">My Nanodegree Apps!</string>
</resources>


